# RX8-CANbusGateway

./: README.md
Application/: ActiveCallPage.qml  AmbientLightingPage.qml  AudioSettingsPage.qml  AuxView.qml  BluetoothManager.cpp  BluetoothManager.h  BluetoothMediaPlayer.cpp  BluetoothMediaPlayer.h  BluetoothMusicView.qml  BluetoothSettingsPage.qml  CANBusPage.qml  CANRawDataPage.qml  CDPage.qml  CDView.qml  CMakeLists.txt  CallManager.cpp  CallManager.h  CarplayPage.qml  ClimatePage.qml  ClockSettingsPage.qml  ContactsManager.cpp  ContactsManager.h  HomePage.qml  IncomingCallOverlay.qml  Main.qml  MediaPage.qml  PhonePage.qml  RadioPage.qml  RadioSourceView.qml  SettingsPage.qml  SplashScreen.qml  SystemClock.h  ambientController.cpp  ambientController.h  canController.cpp  canController.h  carplayController.cpp  carplayController.h  main.cpp  resources.qrc  (+2 more)
Embedded Software/ESP32/: platformio.ini
Embedded Software/ESP32/src/: main.cpp
Embedded Software/ESP32/src/communication/: commands.cpp  commands.h  protocol.cpp  protocol.h
Embedded Software/STM32/: STM32_Application Debug.launch  STM32_Application.ioc
PCBs/RX8-7/: Audio3.kicad_sch  MCU.kicad_sch  MCU2.kicad_sch  RX8-7(Finished_BeforeESPChange).kicad_pro  RX8-7(STM_CENTRE).kicad_pcb  RX8-7(STM_CENTRE).kicad_prl  RX8-7(STM_CENTRE).kicad_pro  RX8-7(WithoutOpAmps).kicad_pro  RX8-7.csv  RX8-7.kicad_prl  RX8-7.kicad_pro  RX8-7.kicad_sch  RX8-7_BOM.xlsx  audio.kicad_sch  audio2.kicad_sch  audio2.kicad_sch-bak  connectors.kicad_sch  fp-info-cache  power.kicad_sch  sensors.kicad_sch
PCBs/RX8-7/Gerbers/: RX8-7-B_Cu.gbr  RX8-7-B_Mask.gbr  RX8-7-B_Paste.gbr  RX8-7-B_Silkscreen.gbr  RX8-7-Edge_Cuts.gbr  RX8-7-F_Cu.gbr  RX8-7-F_Mask.gbr  RX8-7-F_Paste.gbr  RX8-7-F_Silkscreen.gbr  RX8-7-In1_Cu.gbr  RX8-7-In2_Cu.gbr  RX8-7-NPTH.drl  RX8-7-PTH.drl  RX8-7-job.gbrjob
PCBs/RX8-8/: IO.kicad_sch  RX8-8.kicad_pcb  RX8-8.kicad_prl  RX8-8.kicad_pro  RX8-8.kicad_sch  fp-info-cache  power.kicad_sch
(+27 files in other folders)
